# kairo-core

./: .dvcignore  .env.example  .gitignore  Makefile  README.md  data.dvc  models.dvc  pyproject.toml  test.py
.dvc/: config
api/: __main__.py
config/: _constants.py  datasets.yml
config/ner/: labels.yml  model-config.yml  model.yml
configs/: _constants.py  datasets.yml
configs/misc/: pre-commit.yaml
configs/ner/: rules.yml
notebooks/: 1-draft.ipynb  1r-audio-transcription.ipynb  1r-transcribe-diarization.ipynb  2r-extract-text.ipynb  2r-nlp-e2e.ipynb  _constants.py  _root.py  utils.py
notebooks/nb_scripts/: __init__.py  get_sample_text.py
notebooks/notebooks_scripts/: utils.py
notebooks/scripts/: get_sample_text.py
reports/: oas.yml
reports/model/ner/: base-model-config.json  base-model-encoder-config.json
reports/ner/: label_mapping.json
reports/ner/wandb/: latest-run
reports/ner/wandb/run-20250724_121324-o7tgl3ba/: run-o7tgl3ba.wandb
reports/ner/wandb/run-20250724_121324-o7tgl3ba/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
reports/ner/wandb/run-20250724_152204-478b543x/: run-478b543x.wandb
reports/ner/wandb/run-20250724_152204-478b543x/files/: config.yaml  wandb-metadata.json  wandb-summary.json
reports/ner/wandb/run-20250724_162023-zc89iptr/: run-zc89iptr.wandb
reports/sample/audio/: project-proposal.json
reports/sample/text/: agile-method.md
reports/summary/abstractive/wandb/: latest-run
reports/summary/extractive/wandb/: latest-run
scripts/: _constants.py  api.py  inspect_dataset.py  inspect_ner_ds.py  upload_ner_ds.py
scripts/data/: inspect_ds.py  upload_ner_ds.py
scripts/nb/: main.py  number_headings.py
scripts/nb_update/: number_headings.py
scripts/predict/: ner.py  summary.py
scripts/train/: abs_sum.py  ext_sum.py  ner.py
src/: _constants.py  data.py  data_handler.py  input_processing.py  inter_data_handler.py  server.py  utils.py
src/input_processor/: __init__.py  __main__.py  audio_processor.py
src/modeling/ner/: model.py
src/ner/: __init__.py  __main__.py  config.py  helper.py  model.py  predictor.py  trainer.py
src/summary/: __init__.py  __main__.py
src/summary/abstractive/: __init__.py  config.py  model.py  predictor.py  trainer.py
src/summary/extractive/: __init__.py  config.py  model.py  predictor.py  trainer.py
tests/: _constants.py  conftest.py  test_input_processor.py
tests/e2e/: test_basic_e2e.py
(+12 files in other folders)
