[project]
name = "kairo-core"
version = "0.1.0"
description = "Core for Notebook with Kairo"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "bertopic==0.17.0",
    "datasets==3.6.0",
    "fastapi==0.115.12",
    "faster-whisper==1.1.1",
    "llvmlite==0.44.0",
    "mlx==0.26.1",
    "mlx-lm==0.25.2",
    "numba==0.61.2",
    "numpy==1.26.4",
    "pandas==2.3.0",
    "peft==0.15.2",
    "pyannote-audio==3.3.2",
    "pymupdf==1.26.1",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "pyyaml==6.0.2",
    "scikit-learn==1.5.2",
    "sentence-transformers==4.1.0",
    "spacy==3.8.7",
    "span-marker==1.7.0",
    "timm==1.0.15",
    "torch==2.7.1",
    "torchaudio==2.7.1",
    "torchvision==0.22.1",
    "transformers==4.45.2",
    "trl==0.11.0",
    "uvicorn[standard]==0.34.3",
]

[dependency-groups]
dev = [
    "ipykernel==6.29.5",
    "jupyter==1.1.1",
    "justsdk>=1.1.2",
    "matplotlib==3.10.3",
    "nb-clean==4.0.1",
    "pre-commit==4.2.0",
    "pytest==8.4.0",
    "ruff==0.11.13",
    "seaborn==0.13.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "-s"]
filterwarnings = [
    "ignore:builtin type.*has no __module__ attribute:DeprecationWarning",
    "ignore:Importing 'parser.split_arg_string' is deprecated:DeprecationWarning",
    "ignore:n_jobs value.*overridden.*by setting random_state:UserWarning:umap.*",
    "ignore:invalid escape sequence.*:DeprecationWarning:hdbscan.*",
    "default::DeprecationWarning:tests.*",
    "default::UserWarning:tests.*",
]
